@@ -111,7 +111,7 @@ $pgv_lang["edit_FORM_help"]		= "~#factarray[FORM]#~<br /><br />This is an option
 $pgv_lang["generate_thumb_help"]		= "~#pgv_lang[auto_thumbnail]#~<br /><br />Your system can generate thumbnails for certain types of images automatically.  There may be support for BMP, GIF, JPG, and PNG files.  The types that your system supports are listed beside the checkbox.<br /><br />By clicking this checkbox, you signal the system that you are uploading images of this type and that you want it to try to generate thumbnails for them.  Leave the box unchecked if you want to provide your own thumbnails.<br /><br />";
 $pgv_lang["edit_add_NOTE_help"]		= "~#pgv_lang[add_note]#~<br /><br />This section allows you to add a new Note to the fact that you are currently editing.  Notes are free-form text and will appear in the Fact Details section of the page.<br /><br />";
 $pgv_lang["edit_add_SHARED_NOTE_help"]		= "~#pgv_lang[add_shared_note]#~<br />~#pgv_lang[edit_shared_note]#~<br /><br />Shared notes, like regular notes, are free-form text.  Unlike regular notes, each shared note can be linked to more than one person, family, source, or fact.<br /><br />By clicking the appropriate icon, you can establish a link to an existing shared note or create a new shared note and at the same time link to it.  If a link to an existing shared note has already been established, you can also edit that note's contents.<br /><ul><li><b>Link to an existing shared note</b><div style=\"padding-left:20px;\">If you already know the ID number of the desired shared note, you can enter that number directly into the field.<br /><br />When you click the <b>#pgv_lang[find_shared_note]#</b> icon, you will be able to search the text of all existing shared notes and then choose one of them.  The ID number of the chosen note will be entered into the field automatically.<br /><br />You must click the <b>#pgv_lang[add]#</b> button to update the original record.</div><br /></li><li><b>Create a new shared note</b><div style=\"padding-left:20px;\">When you click the <b>#pgv_lang[create_shared_note]#</b> icon, a new window will open.  You can enter the text of the new note as you wish.  As with regular notes, you can enter URLs.<br /><br />When you click the <b>#pgv_lang[save]#</b> button, you will see a message with the ID number of the newly created shared note.  You should click on this message to close the editing window and also copy that new ID number directly into the ID number field.  If you just close the window, the newly created ID number will not be copied automatically.<br /><br />You must click the <b>#pgv_lang[add]#</b> button to update the original record.</div><br /></li><li><b>Edit an existing shared note</b><div style=\"padding-left:20px;\">When you click the <b>#pgv_lang[edit_shared_note]#</b> icon, a new window will open.  You can change the text of the existing shared note as you wish.  As with regular notes, you can enter URLs.<br /><br />When you click the <b>#pgv_lang[save]#</b> button, the text of the shared note will be updated.  You can close the window and then click the <b>#pgv_lang[save]#</b> button again.<br /><br />When you change the text of a shared note, your change will be reflected in all places to which that shared note is currently linked.  New links that you establish after having made your change will also use the updated text.</div></li></ul>";
-$pgv_lang["edit_add_GEDFact_ASSISTED_help"]	= "~USING GEDFACT ASSISTANT~<br /><br /> Clicking the \"+\" icon will open the GEDFact Shared Note assistant Window.<br />Specific help will be found there.<br /><br >When this window is saved, the Shared Note id will be pasted back here.";
+$pgv_lang["edit_add_GEDFact_ASSISTED_help"]	= "~USING GEDFACT ASSISTANT~<br /><br />Clicking the \"+\" icon will open the GEDFact Shared Note Assistant window.<br />Specific help will be found there.<br /><br />When you click the \"Save\" button, the ID of the Shared Note will be pasted here.<br /><br />";
 $pgv_lang["edit_add_SOUR_help"]		= "~#pgv_lang[add_source]#~<br /><br />This section allows you to add a new source citation to the fact that you are currently editing.<br /><br />In the Source field you enter the ID for the source.  Click the <b>#pgv_lang[create_source]#</b> link if you need to enter a new source.  In the Citation Details field you would enter the page number or other information that might help someone find the information in the source.  In the Text field you would enter the text transcription from the source.<br /><br />";
 $pgv_lang["edit_add_ASSO_help"]		= "~#pgv_lang[add_asso]#~<br /><br />#pgv_lang[add_asso]# allows you to link a fact with an associated person in the site.  This is one way in which you might record that someone was the Godfather of another person.<br /><br />";
 $pgv_lang["edit_QUAY_help"]		= "~#factarray[QUAY]#~<br /><br />You would use this field to record the quality or reliability of the data found in this source.  Many genealogy applications use a number in the field. <b>3</b> might mean that the data is a primary source, <b>2</b> might mean that it was a secondary source, <b>1</b> might mean the information is questionable, and <b>0</b> might mean that the source is unreliable.<br /><br />";
